--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,22 @@
 <html>
+  <head>
+    <title>Main</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <script type="module" src="src/index.js"></script>
+    <style>
+      /* @font-face {
+        font-family: "Black Han Sans";
+        src: url('') format("woff2");
+        font-weight: normal;
+        font-style: normal;
+      } */
+    </style>
+  </head>
 
-<head>
-  <title>Main</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="module" src="src/index.js" ></script>
-</head>
-
-<body>
-  <div class="contents__wrap"></div>
-</body>
-
+  <body>
+    <div class="contents__wrap"></div>
+  </body>
 </html>
